# What-a-miserable-cat-s-life

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  cmake-clean  patchList.md  patchList.txt
code/include/: AlgorithmHandler.hpp  Animal.hpp  Cat.hpp  Color_SDL.hpp  Dog.hpp  Hitbox.hpp  Images.hpp  Imports.hpp  Pos.hpp  Utilities.hpp  Vector.hpp  Verbose.hpp  Warning.hpp
code/include/utility libs/: Color Constants.hpp  installSubmodules
code/src/: AlgorithmHandler.cpp  Animal.cpp  Cat.cpp  Dog.cpp  Hitbox.cpp  Pos.cpp  Vector.cpp  Verbose.cpp  Warning.cpp  main.cpp
sprites/: imgToHex
sprites/img/: catTemplate.xcf  deadcatTemplate.xcf  dogTemplate.xcf
test/: CMakeLists.txt  hitbox.cpp  initAlgo.cpp
